--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mocha",
+  "name": "@markforged/mocha",
   "version": "9.2.2",
   "type": "commonjs",
   "description": "simple, flexible, fun test framework",
